@@ -1,7 +1,8 @@
-linphone-3.2.1 --
-	* improved mute button
+linphone-3.2.1 -- October 5, 2009
+	* improve graphics and behaviour of mute button
 	* updated translations
-	*
+	* windows installer installs reg keys to indicate windows to start linphone clicking of sip uris
+	* workaround a bug Gtk-macos X with modal popup windows, preventing to answer calls
 
 
 linphone-3.2.0 -- September 17, 2009
